added some ratchet goodness...lets see if it works

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<h1>Hello World</h1>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="mickelsonm's github page">
+        <link rel="stylesheet" href="css/ratchet.min.css">
+        <title>mickelsonm@github.io</title>
+    </head>
+    <body>
+        <div class="container">
+            <header class="bar bar-nav">
+              <h1 class="title">Hello World!</h1>
+            </header>
+            <section class="content">
+                <p>I figured I might as well use <em>Hello World!</em> too!</p>
+            </section>
+            <footer>
+                &copy; 2014
+            </footer>
+        </div>
+    </body>
+</html>
