--- a/index.html
+++ b/index.html
@@ -8,11 +8,34 @@
     </head>
     <body>
         <div class="container">
-            <header class="bar bar-nav">
-              <h1 class="title">Hello World!</h1>
+            <header>
+                <nav class="bar bar-tab">
+                    <a class="tab-item active" href="#">
+                        <span class="icon icon-home"></span>
+                        <span class="tab-label">Home</span>
+                    </a>
+                    <a class="tab-item" href="#">
+                        <span class="icon icon-person"></span>
+                        <span class="tab-label">Profile</span>
+                    </a>
+                    <a class="tab-item" href="#">
+                        <span class="icon icon-star-filled"></span>
+                        <span class="tab-label">Favorites</span>
+                    </a>
+                    <a class="tab-item" href="#">
+                        <span class="icon icon-search"></span>
+                        <span class="tab-label">Search</span>
+                    </a>
+                    <a class="tab-item" href="#">
+                        <span class="icon icon-gear"></span>
+                        <span class="tab-label">Settings</span>
+                    </a>
+                </nav>
             </header>
             <section class="content">
-                <p>I figured I might as well use <em>Hello World!</em> too!</p>
+                <p class="card">
+                    I figured I might as well use <em>Hello World!</em> too!
+                </p>
             </section>
             <footer>
                 &copy; 2014
