--- a/index.html
+++ b/index.html
@@ -33,9 +33,23 @@
                 </nav>
             </header>
             <section class="content">
-                <p class="card">
-                    I figured I might as well use <em>Hello World!</em> too!
-                </p>
+                <div class="slider" id="mySlider">
+                    <div class="slide-group">
+                        <div class="slide">
+                            <img src="http://cdn.theatlantic.com/static/mt/assets/science/Mount_Everest_(topgold).jpg">
+                            <span class="slide-text">
+                                <span class="icon icon-left-nav"></span>
+                                Slide me
+                            </span>
+                        </div>
+                        <div class="slide">
+                            <h1>Whoa</h1>
+                        </div>
+                        <div class="slide">
+                            <h1>Whoa AGAIN!</h1>
+                        </div>
+                    </div>
+                </div>
             </section>
             <footer>
                 &copy; 2014
