--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                 <div class="slider" id="mySlider">
                     <div class="slide-group">
                         <div class="slide">
-                            <img src="http://cdn.theatlantic.com/static/mt/assets/science/Mount_Everest_(topgold).jpg">
                             <span class="slide-text">
                                 <span class="icon icon-left-nav"></span>
                                 Slide me
@@ -55,5 +54,6 @@
                 &copy; 2014
             </footer>
         </div>
+        <script type="text/javascript" src="js/ratchet.min.js"></script>
     </body>
 </html>
