--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         <div class="container">
-            <header>
-                <nav class="bar bar-tab">
+            <header class="bar bar-nav">
+                <h1 class="title">mickelsonm@github.io</h1>
+                <nav class="bar-tab">
                     <a class="tab-item active" href="#">
                         <span class="icon icon-home"></span>
                         <span class="tab-label">Home</span>
