--- a/index.html
+++ b/index.html
@@ -34,22 +34,9 @@
                 </nav>
             </header>
             <section class="content">
-                <div class="slider" id="mySlider">
-                    <div class="slide-group">
-                        <div class="slide">
-                            <span class="slide-text">
-                                <span class="icon icon-left-nav"></span>
-                                Slide me
-                            </span>
-                        </div>
-                        <div class="slide">
-                            <h1>Whoa</h1>
-                        </div>
-                        <div class="slide">
-                            <h1>Whoa AGAIN!</h1>
-                        </div>
-                    </div>
-                </div>
+                <p>
+                    <a href="http://goratchet.com/">Ratch.js</a> in action.</a>
+                </p>
             </section>
             <footer>
                 &copy; 2014
