--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <body>
         <div class="container">
             <header class="bar bar-nav">
-                <h1 class="title">mickelsonm@github.io</h1>
-                <br />
                 <nav class="bar-tab">
                     <a class="tab-item active" href="#">
                         <span class="icon icon-home"></span>
@@ -35,6 +33,7 @@
                 </nav>
             </header>
             <section class="content">
+                <h1>Awesome!</h1>
                 <p>
                     <a href="http://goratchet.com/">Ratch.js</a> in action.</a>
                 </p>
