--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="description" content="mickelsonm's github page">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/ratchet.min.css">
         <title>mickelsonm@github.io</title>
     </head>
