--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     </a>
                 </nav>
             </header>
-            <section class="content">
+            <section class="content card">
                 <h1>Awesome!</h1>
-                <p>
+                <p class="content-padded">
                     <a href="http://goratchet.com/">Ratch.js</a> in action.</a>
                 </p>
             </section>
