--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </a>
                 </nav>
             </header>
-            <section class="content card">
+            <section class="content">
                 <h1>Awesome!</h1>
                 <p class="content-padded">
                     <a href="http://goratchet.com/">Ratch.js</a> in action.</a>
