code be gone...har har har

--- a/index.html
+++ b/index.html
@@ -1,48 +1,11 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="mickelsonm's github page">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/ratchet.min.css">
-        <title>mickelsonm@github.io</title>
-    </head>
-    <body>
-        <div class="container">
-            <header class="bar bar-nav">
-                <nav class="bar-tab">
-                    <a class="tab-item active" href="#">
-                        <span class="icon icon-home"></span>
-                        <span class="tab-label">Home</span>
-                    </a>
-                    <a class="tab-item" href="#">
-                        <span class="icon icon-person"></span>
-                        <span class="tab-label">Profile</span>
-                    </a>
-                    <a class="tab-item" href="#">
-                        <span class="icon icon-star-filled"></span>
-                        <span class="tab-label">Favorites</span>
-                    </a>
-                    <a class="tab-item" href="#">
-                        <span class="icon icon-search"></span>
-                        <span class="tab-label">Search</span>
-                    </a>
-                    <a class="tab-item" href="#">
-                        <span class="icon icon-gear"></span>
-                        <span class="tab-label">Settings</span>
-                    </a>
-                </nav>
-            </header>
-            <section class="content">
-                <h1>Awesome!</h1>
-                <p class="content-padded">
-                    <a href="http://goratchet.com/">Ratch.js</a> in action.</a>
-                </p>
-            </section>
-            <footer>
-                &copy; 2014
-            </footer>
-        </div>
-        <script type="text/javascript" src="js/ratchet.min.js"></script>
-    </body>
+<head>
+	<title>Just somewhere to talk...</title>
+</head>
+<body>
+	<h1>Random Musings...</h1>
+
+	<script src="https://gist.github.com/mickelsonm/d75f26d6a67714a35f46.js"></script>
+</body>
 </html>
