add super stupid simple styling...make it different...

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-	<title>Just somewhere to talk...</title>
+	<title>Random Musings</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<h1>Random Musings...</h1>
